[package]
name = "rjini"
version = "0.0.0"
edition = "2021"
description = "Implementation of Jini library in rust."
authors = ["Ivanchuk Ivan <l3r8y@duck.com>"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.75"
regex = "1.7.1"
itertools = "0.11.0"
